--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
   <main id="inicio" class="container hero" role="main">
     <section>
       <div class="eyebrow">
-        <span class="chip">🚚 Envío 24–48h</span>
-        <span class="chip">↩️ Devolución 30 días</span>
-        <span class="chip">🔒 Pago seguro</span>
+        <span class="chip">Envío 24–48h</span>
+        <span class="chip">Devolución 30 días</span>
+        <span class="chip">Pago seguro</span>
       </div>
-      <h1>Moda esencial, calidad honesta</h1>
+      <h1>Only for Hank's Brand</h1>
       <p>Negro + verde Hank&#39;s. Tejidos duraderos, cortes que sientan bien y precios sin humo. Compra ahora y viste mejor.</p>
       <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:1rem">
         <a class="btn brand" href="#catalogo">Ver catálogo</a>
@@ -164,8 +164,8 @@
         <h2>¿Necesitas ayuda con la talla?</h2>
         <p class="muted" style="color:var(--muted)">Escríbenos y te respondemos en pocas horas. También atendemos por IG.</p>
         <ul style="color:var(--muted)">
-          <li>Correo: soporte@hanks.co (demo)</li>
-          <li>Instagram: @hanks.co (demo)</li>
+          <li>Correo: hernangm2006@gmail.com</li>
+          <li>Instagram: hernangm_</li>
         </ul>
       </div>
       <div class="mock">
