--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- v6 -->
+<!-- v7: consejo aplicado (Poppins/Montserrat), sin bloque extra -->
 <!doctype html>
 <html lang="es">
 <head>
@@ -14,10 +14,10 @@
     :root{
       --bg:#0a0a0a;          /* negro base */
       --panel:#0e0e0e;       /* panel oscuro */
-      --text:#e6ffe9;        /* texto muy claro con tinte verdoso */
+      --text:#e6ffe9;        /* texto claro con tinte verdoso */
       --muted:#9bb29e;       /* gris verdoso */
-      --brand:#2f7d32;       /* VERDE marca (ajústalo al tono exacto del logo) */
-      --brand-2:#1d5e20;     /* verde más oscuro para hover */
+      --brand:#2f7d32;       /* verde Hank's */
+      --brand-2:#1d5e20;     /* verde oscuro */
       --stroke:rgba(230,255,233,.10);
       --card:linear-gradient(180deg,rgba(14,14,14,.92),rgba(14,14,14,.6));
     }
@@ -29,13 +29,14 @@
         radial-gradient(900px 420px at 10% -20%, rgba(29,94,32,.12), transparent 60%),
         var(--bg);
       color:var(--text);
+      /* Consejo aplicado: Poppins/Montserrat */
       font:16px/1.6 "Poppins","Montserrat",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
       -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
     }
-    h1,h2,h3{font-family:"Poppins","Montserrat",sans-serif;font-weight:800;letter-spacing:.2px}
-    p,li,button,input,select{font-family:"Poppins","Montserrat",sans-serif}
+    /* Jerarquía tipo Sense/Refresh: títulos pesados, cuerpo regular/seminegrita */
+    h1,h2,h3{font-family:"Poppins","Montserrat",sans-serif;font-weight:800;letter-spacing:.2px;margin:0 0 .4rem}
+    p,li,button,input,select{font-family:"Poppins","Montserrat",sans-serif;font-weight:400}
     .fw600{font-weight:600}
-
     img{max-width:100%;display:block}
     a{color:inherit;text-decoration:none}
     .container{max-width:1150px;margin:auto;padding:0 1rem}
@@ -56,7 +57,7 @@
     .hero{display:grid;gap:2rem;grid-template-columns:1.2fr .8fr;align-items:center;padding:4.8rem 0 2.2rem}
     .eyebrow{font-size:.85rem;color:var(--muted);display:flex;gap:.5rem;flex-wrap:wrap}
     .chip{border:1px solid var(--stroke);padding:.25rem .6rem;border-radius:.7rem}
-    .hero h1{font-size:clamp(2rem,4.1vw,3.2rem);line-height:1.08;margin:.4rem 0}
+    .hero h1{font-size:clamp(2rem,4.1vw,3.2rem);line-height:1.08}
     .hero p{color:var(--muted)}
     .mock{border:1px solid var(--stroke);border-radius:1rem;background:var(--card);padding:1rem;display:grid;place-items:center}
     .mock img{border-radius:.7rem}
@@ -98,11 +99,6 @@
     .artists{padding:2.2rem 0 3rem}
     .artists .wrap{display:grid;gap:1rem;grid-template-columns:1fr .9fr;align-items:center;border:1px solid var(--stroke);border-radius:1rem;padding:1rem;background:linear-gradient(180deg,rgba(18,18,18,.9),rgba(18,18,18,.6))}
     .artists h3{margin:.2rem 0}
-
-    /* Consejo del diseñador */
-    .designer-tip{background:#111;border:1px solid var(--stroke);border-radius:12px;padding:1.2rem;margin:2rem 0 3rem}
-    .designer-tip h3{margin:.2rem 0 0.6rem}
-    .designer-tip strong{color:var(--brand)}
 
     /* Responsive */
     @media (max-width: 1000px){.grid{grid-template-columns:repeat(3,1fr)}.hero{grid-template-columns:1fr}.artists .wrap{grid-template-columns:1fr}}
@@ -224,29 +220,17 @@
     </div>
   </section>
 
-  <!-- Consejo del diseñador (tu texto aplicado) -->
-  <section class="container">
-    <div class="designer-tip">
-      <h3>💡 Consejo de diseño</h3>
-      <p>Mi consejo como diseñador gráfico: no uses el tema <strong>Dawn</strong> ni las fuentes predeterminadas de Shopify.
-      En su lugar, usa <strong>Sense</strong> o <strong>Refresh</strong> y personaliza la combinación de colores.
-      Prueba con <strong>Poppins</strong> o <strong>Montserrat</strong> en regular o seminegrita para el cuerpo del texto y en
-      negrita o extranegrita para los títulos (o fuentes similares). Esto hará que tu tienda se vea más profesional y consolidada,
-      además de mejorar las conversiones.</p>
-    </div>
-  </section>
-
   <footer class="footer">
     <p>© <span id="year"></span> Hank&#39;s &amp; Company — Hecho con cariño y buen gusto.</p>
   </footer>
 
   <script>
-    // ===== Datos de demo con tus fotos =====
+    // Datos de demo con tus fotos
     const PRODUCTS = [
-      {id:'tee-skate', nombre:'AstroHank Black Shirt', tipo:'camiseta', precio:24.90, popular:10, img:'./assets/tee-skate.jpg', tallas:['S','M','L','XL'], etiqueta:'Nuevo'},
-      {id:'tee-grid', nombre:'Hank Blue Hearts Shirt', tipo:'camiseta', precio:22.90, popular:9, img:'./assets/tee-grid.jpg', tallas:['S','M','L','XL']},
-      {id:'tee-front', nombre:'Hank Green Hearts Shirt', tipo:'camiseta', precio:19.90, popular:8, img:'./assets/tee-front.jpg', tallas:['S','M','L','XL']},
-      {id:'hoodie-astro', nombre:'Hoodie AstroHank Black', tipo:'sudadera', precio:39.90, popular:7, img:'./assets/hoodie-astro.jpg', tallas:['S','M','L','XL'], etiqueta:'Best-seller'}
+      {id:'tee-skate', nombre:'Camiseta Skate Navy', tipo:'camiseta', precio:24.90, popular:10, img:'./assets/tee-skate.jpg', tallas:['S','M','L','XL'], etiqueta:'Nuevo'},
+      {id:'tee-grid', nombre:'Camiseta Grid Logo', tipo:'camiseta', precio:22.90, popular:9, img:'./assets/tee-grid.jpg', tallas:['S','M','L','XL']},
+      {id:'tee-front', nombre:'Camiseta Logo Front', tipo:'camiseta', precio:19.90, popular:8, img:'./assets/tee-front.jpg', tallas:['S','M','L','XL']},
+      {id:'hoodie-astro', nombre:'Hoodie Astro Black', tipo:'sudadera', precio:39.90, popular:7, img:'./assets/hoodie-astro.jpg', tallas:['S','M','L','XL'], etiqueta:'Best-seller'}
     ];
 
     const state = { query:'', tipo:'', orden:'pop', cart:[] };
@@ -314,7 +298,7 @@
       });
     }
 
-    // ===== Carrito =====
+    // Carrito
     const drawer = document.getElementById('drawer');
     const btnCart = document.getElementById('btn-carrito');
     const cartItems = document.getElementById('cart-items');
@@ -366,13 +350,13 @@
       cartCount.textContent = state.cart.reduce((s,i)=>s+i.qty,0);
     }
 
-    // ===== Filtros listeners =====
+    // Filtros
     q.addEventListener('input', ()=>{ state.query = q.value.trim().toLowerCase(); render(); });
     tipo.addEventListener('change', ()=>{ state.tipo = tipo.value; render(); });
     orden.addEventListener('change', ()=>{ state.orden = orden.value; render(); });
     btnLimpiar.addEventListener('click', ()=>{ q.value=''; tipo.value=''; orden.value='pop'; state.query=''; state.tipo=''; state.orden='pop'; render(); });
 
-    // ===== Checkout (demo) =====
+    // Checkout (demo)
     document.getElementById('btn-checkout').addEventListener('click',()=>{
       const msg = document.getElementById('checkout-msg');
       if(!state.cart.length){ msg.textContent = 'Añade algo al carrito antes de pagar 😉'; return; }
